# wgpu-gl-unused-uniform-repro

./: Cargo.toml
src/: main.rs  shader.wgsl
