[package]
name = "wgpu_gl_unused_uniform_repro"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", branch = "master" }
winit = "*"
pollster = "*"
env_logger = "*"
